fixed some bottomnav layout issues'

--- a/src/styles/AlertReadme.scss
+++ b/src/styles/AlertReadme.scss
@@ -16,9 +16,6 @@ div.alert-wrapper {
 		left: 0;
 		top: 0;
 
-		.alert-closed-content {
-
-		}
 		.alert-open-content {
 			display: flex;
 			flex-direction: row;
