--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -34,3 +34,8 @@ $callLargeHeight-desktop: 170px;
 $trendingWidth: 850px;
 $trendingHeight: 180px;
 $thumb-height: 88px;
+
+.bottom-nav-test{
+    height: 650px;
+    background: $bottomNav;
+}
