--- a/src/styles/BottomNav copy.scss
+++ b/src/styles/BottomNav copy.scss
@@ -8,15 +8,13 @@
     width: 100%; 
     // padding: 40px 0 40px 0 ;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    // position: relative;
+    justify-content: center;
+    position: relative;
     // margin-top: 50px;
 
     #footer-content-container {
-        // height: 300px; 
-        margin-bottom: 40px;
+        // border: 2px solid blue; 
+        height: 300px; 
         width: 1000px;
         display: flex;
         justify-content: space-around;
@@ -86,54 +84,56 @@
             font-size: .8em;
         }
     }
+}
 
-
-    #footer-lower-section-container {
-        width: 700px;
-        margin: 0 auto;
+#footer-lower-section-container {
+    // border: 2px solid red;
+    width: 700px;
+    margin: 0 auto;
+    position: relative;
+    bottom: 250px;
+    color: $ltGrey;
+    a:visited {
         color: $ltGrey;
-        a:visited {
-            color: $ltGrey;
-        }
-        
-        #footer-lower-section-icons {
-            // border: 2px solid red;
-            text-decoration: none;
-            color: $ltGrey;
-            width: 250px;
-            margin: 0 auto;
-            text-align: center;
-            font-size: 1em;
-            display: flex;
-            justify-content:space-between;
-            margin-bottom:15px;
-        }
-        #footer-lower-section-icons a {
-            // color: red;
-            font-size: 1.1em;
-        }
-    
-        #footer-lower-section-copy {
-            text-align: center;
-            font-size: .7em;
-            font-weight: 300;
-        }
-        
-       
-    
-        #footer-lower-section-logo {
-            // color: red;
-            margin-top: 20px;
-            font-size: 1.1em;
-            text-align: center;
-        }
-        
-        #bc-logo {
-            // border: 2px solid red;
-            position: relative;
-            top: 5px;
-            margin: 0 3px 0 9px;
-        }
-       
     }
+    
+    #footer-lower-section-icons {
+        // border: 2px solid red;
+        text-decoration: none;
+        color: $ltGrey;
+        width: 250px;
+        margin: 0 auto;
+        text-align: center;
+        font-size: 1em;
+        display: flex;
+        justify-content:space-between;
+        margin-bottom:15px;
+    }
+    #footer-lower-section-icons a {
+        // color: red;
+        font-size: 1.1em;
+    }
+
+    #footer-lower-section-copy {
+        text-align: center;
+        font-size: .7em;
+        font-weight: 300;
+    }
+    
+   
+
+    #footer-lower-section-logo {
+        // color: red;
+        margin-top: 20px;
+        font-size: 1.1em;
+        text-align: center;
+    }
+    
+    #bc-logo {
+        // border: 2px solid red;
+        position: relative;
+        top: 5px;
+        margin: 0 3px 0 9px;
+    }
+   
 }
